tests/reject/infer_bare_empty.ty
fn main():
    xs := []
    print("never grounded")
